test/scc/expr/semantic-errors/133.a
133.t:4:20: error: nonconstant array index in initializer